--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
         <item>QC</item>
         <item>SK</item>
         <item>YT</item>
-        <item> </item>
+        <item>N/A</item>
     </string-array>
 
     <string-array name="sectors">
